@@ -21,7 +21,7 @@
 <FONT SIZE="5"><STRONG>Download:</STRONG></FONT><BR>
 <UL><A HREF="http://sourceforge.net/project/showfiles.php?group_id=67789">iTerm 0.8.0</A><IMG src="new.gif"> The latest iTerm release<BR>
 <A HREF="http://cvs.sourceforge.net/cvstarballs/iterm-cvsroot.tar.bz2">Nightly Tarball</A><BR>
-<A HREF="iTerm.app.sitx">Recent CVS build</A><BR>
+<A HREF="iTerm.app.sitx">Recent CVS build</A> (4/18/2004)<BR>
 </UL>
 
 <FONT SIZE="5"><STRONG>Installation:</STRONG></FONT><BR>
